fix: remove scrollbar-track background-color

--- a/src/App.css
+++ b/src/App.css
@@ -48,9 +48,6 @@
     width: 8px;
     height: 8px;
 }
-*::-webkit-scrollbar-track {
-    background-color: var(--bg-color-2);
-}
 *::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background-color: var(--bg-scrollbar-thumb-color);
